# LearnOpenGL

./: .gitignore  .gitmodules  GLFWMakefile  Makefile  README.md
chapters/3.2_building_glfw/: CMakeLists.txt
chapters/3.2_building_glfw/src/: simple_example.cpp
chapters/4.0_hello_window/src/: simple_example.cpp
chapters/4.0hello_window/: CMakeLists.txt
chapters/5.0_hello_triangle/: CMakeLists.txt
chapters/5.0_hello_triangle/src/: drawable.hpp  shader_program.cpp  shader_unit.cpp
chapters/5.0_hello_triangle/src/glad/: glad.h
chapters/5.0hello_triangle/src/: drawable.cpp  shader_handler.hpp  shader_program.hpp  shader_unit.hpp
chapters/6.0_shaders/: CMakeLists.txt  Makefile
chapters/6.0_shaders/shaders/: fragment_shader.glsl  fragment_shader_io.glsl  vertex_shader_ej1.glsl  vertex_shader_ej2.glsl  vertex_shader_ej3.glsl  vertex_shader_grad.glsl  vertex_shader_io.glsl
chapters/6.0_shaders/src/: drawable.cpp  drawable.hpp  ej1.cpp  ej3.cpp  ejc.cpp  logger.cpp  logger.hpp  shader_program.cpp  shader_program.hpp  shader_unit.cpp  shader_unit.hpp  simple_drawable.cpp  simple_drawable.hpp  simple_example.cpp
chapters/6.0_shaders/src/figures/: triangle1.cpp  triangle1.hpp  triangle2.cpp  triangle2.hpp  triangle3.cpp  triangle3.hpp  triangle_ej1.cpp  triangle_ej1.hpp  triangle_ej2.cpp  triangle_ej2.hpp  triangle_ej3.cpp  triangle_ej3.hpp  triangle_ejc.cpp  triangle_ejc.hpp
chapters/7.0_textures/: CMakeLists.txt  Makefile  NOTES.md
chapters/7.0_textures/shaders/: fragment_shader.glsl
chapters/7.0_textures/src/: drawable.cpp  drawable.hpp  image_loader.cpp  image_loader.hpp  logger.cpp  shader_handler.hpp  shader_program.cpp  shader_unit.hpp  simple_example.cpp
chapters/7.0_textures/src/figures/: triangle1.cpp  triangle1.hpp
chapters/7.0_textures/src/glad/: glad.c
glad/: CMakeLists.txt  Makefile
